--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "clean": "npm run clean --workspaces --if-present && rm -rf node_modules"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
-    "@types/node": "^20.10.0"
+    "@types/node": "^20.10.0",
+    "bip39": "^3.1.0",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=20.0.0"
