--- a/apps/demo-seller/package.json
+++ b/apps/demo-seller/package.json
@@ -12,15 +12,17 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@types/cors": "^2.8.19",
     "@x402/stacks": "*",
     "@x402/stacks-express": "*",
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1"
+    "cors": "^2.8.6",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
-    "@types/node": "^20.10.0",
     "@types/express": "^4.17.21",
-    "tsx": "^4.7.0"
+    "@types/node": "^20.10.0",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   }
 }
